# 7sem-Testing

./: .gitignore  .gitignore.bak  .gitlab-ci.yml
.github/workflows/: stock_workflow.yml
DBCW/: bib.bib  biblio.bib  reprort.tex
proj/: BL.mdj  DA.mdj  HighLevel.mdj  UML.mdj  readme.md
proj/DBCW/: CMakeLists.txt  CmakeLists.txt  CmakeLists.txt.bak  DBCW.sln  config.txt  graph.viz  graph.viz.bak  test.txt
proj/DBCW/BLUnitTesting/: Test.cpp
proj/DBCW/DA/: AdminConnect.h  ArtistConnect.h  CMakeLists.txt  CmakeLists.txt  ConConfig.cpp  ConConfig.h  DA.vcxproj  DA.vcxproj.filters  IPgConnect.h  LiteConfig.cpp  LiteConnect.h  LtAlRepo.h  LtArRepo.h  LtGraphRepo.h  LtMusRepo.h  LtPlstRepo.h  LtTbRepo.h  LtUsRepo.h  PgAlbumRepository.cpp  PgAlbumRepository.h  PgGraphRepository.h  PgMusRepository.cpp  PgMusRepository.h  PgPlaylistRepository.cpp  PgPlaylistRepository.h  PgTablesRepository.cpp  PgTablesRepository.h  PgUserRepo.h  __all_src.txt  stUserConnect.h
proj/DBCW/DA/IntegrationTesting/: CMakeLists.txt  RepoTests.cpp  TestConfig.h  TestConnect.h
proj/DBCW/DA/UnitTesting/: CMakeLists.txt  ObjectMother.cpp  ObjectMother.h  RepoTests.cpp  TestConfig.cpp  TestConfig.h  TestConnect.cpp  TestConnect.h  UnitTesting.vcxproj  UnitTesting.vcxproj.filters
proj/DBCW/DA/UnitTesting/libpqPLUG/: CMakeLists.txt  libpq-fe.cpp  libpq-fe.h  libpqPLUG.vcxproj
proj/DBCW/DBCW/: AdminConnect.h  AdminInterface.h  ArtistConnect.h  ArtistInterface.h  BaseInterface.h  CMakeLists.txt  CmakeLists.txt  ConConfig.h  Config.h  ConnectException.h  DBCW.cpp  DBCW.vcxproj  DBCW.vcxproj.filters  DBStartException.h  Facade.cpp  Facade.h  IAlbumsRepository.h  IArtistRepository.h  IConnect.h  IGraphRepo.h  IMusRepository.h  IPlaylistRepository.h  ITablesRepository.h  IUserRepo.h  Login.h  LoginException.cpp  LoginException.h  MusItem.cpp  MusItem.h  PgAlbumRepository.h  PgArtistRepository.h  PgGraphRepository.h  PgTablesRepository.cpp  PlstItem.h  UserInterface.h  graph.dot.bak  packages.config  stUserConnect.h
proj/DBCW/DBCW/DBCW_ut/: BLUnitTesting.vcxproj.filters  CMakeLists.txt  Test.cpp
proj/DBCW/DBCW/DBCW_ut/mocks/: ConfigMock.cpp  ConfigMock.h  ConnectMock.h  PlaylistRepositoryMock.h  TablesRepositoryMock.h
proj/DBCW/DBCW/DBCW_ut_lon/: CMakeLists.txt  Test.cpp
proj/DBCW/DBCW/DBCW_ut_lon/mocks/: AlbumsRepositoryMock.h  ArtistRepositoryMock.h  ConfigMock.cpp  ConfigMock.h  GraphRepoMock.h  MusRepositoryMock.h  TablesRepositoryMock.h  UserRepoMock.h
proj/DBCW/DBCW/IntegrationTesting/: BLUnitTesting.vcxproj  CMakeLists.txt  Test.cpp  TestConfig.cpp  TestConnect.cpp  TestConnect.h
proj/DBCW/Interface/: AdminInterface.h  ArtistInterface.h  CMakeLists.txt  CmakeLists.txt  Interface.vcxproj  Interface.vcxproj.filters  Login.h  UserInterface.cpp  UserInterface.h  View.cpp  View.h  __all_src.txt
proj/DBCW/Main/: CMakeLists.txt  ConfigFactory.cpp  ConfigFactory.h  DBCW.cpp  Login.h  Main.vcxproj  Main.vcxproj.filters  graph.dot
proj/DBCW/TESTS/: e2e.py  e2e.txt
proj/DBCW/UnitTesting/: RepoTests.cpp  UnitTesting.cpp  UnitTesting.vcxproj
proj/DBCW/WebWrapper/: AdminPas.txt  CMakeLists.txt  DTO.h  PasCon.h  ServerController.h  ServerSettings.h  Token.h  WebWrapper.cpp  WebWrapper.h  jwtWrapper.cpp  jwtWrapper.h
proj/DBCW/cmake/: libs.cmake
proj/DBCW/libpqPLUG/: libpq-fe.cpp  libpq-fe.h  libpqPLUG.vcxproj.filters
proj/DBCW/nginx-1.23.1/nginx-1.23.1/conf/: nginx.conf  nginx.conf.bak
proj/DBCW/scipts/: run_units.sh
proj/DBCW/scripts/: run_units.sh
proj/SQLlite/: DataBase.db  sqlite3.exp  sqlite3.lib  sqlite3_64.exp  sqlite3_64.lib
proj/nginx/: nginx.conf
proj/sql/create/: alter.sql  alter.sql.bak  copy.sql  copy.sql.bak  create.sql  create.sql.bak  grant.sql  grant.sql.bak
proj/sql/create/data/: albums.csv  artists.csv  banks.csv  cards.csv  muscomps.csv  playlists.csv  pm.csv  requests.csv  transactions.csv  uc.csv  up.csv  users.csv
proj/sql/create/genscript/: generator.py
proj/sql/test/: test.sql  test.sql.bak
